---
config:
  layout: elk
---
classDiagram
    class IRentStrategy {
        <<interface>>
        +ComputeRent(tile, owner, diceTotal, own, rules) int
    }

    class ITileRentInfo {
        <<interface>>
        +Name : string
        +Type : TileType
        +Group : ColorGroup
        +IsMortgaged : bool
        +HouseCount : int
        +BaseRent : int
        +RentByHouses : int[]
    }

    class IOwnershipService {
        <<interface>>
        +GetOwner(tile) Player
        +CountOwnedInGroup(owner, group) int
        +CountRailroadsOwned(owner) int
        +OwnsBothUtilities(owner) bool
    }

    class IRentModifier {
        <<interface>>
        +Apply(currentRent, tile, tenant, owner) int
        +IsActive() bool
    }

    class IRuleSet {
        <<interface>>
        +RailroadBaseRent() int
        +UtilityRentSingleMult() int
        +UtilityRentBothMult() int
        +StreetsInGroup(group) int
    }
    class StandardRentStrategy {
        +ComputeRent(...)
        -StreetRent()
        -RailroadRent()
        -UtilityRent()
    }

    class OwnershipServiceAdapter {
        -owners : Dictionary
        -ownedByPlayer : Dictionary
        +SetOwner(tile, owner)
        +GetOwner(tile)
        +CountOwnedInGroup(...)
        +CountRailroadsOwned(...)
        +OwnsBothUtilities(...)
    }

    class RentModifierService {
        -_mods : List~IRentModifier~
        +Add(mod)
        +ApplyAll(...)
        +DoubleRentOnceForTile(tile)
        +FreeNextRentForTenant(tenant)
    }

    class StandardRuleSet {
        -railroadBase : int
        -utilitySingle : int
        -utilityBoth : int
        +RailroadBaseRent()
        +UtilityRentSingleMult()
        +UtilityRentBothMult()
        +StreetsInGroup()
    }

    class RentManager {
        -playerManager : PlayerManager
        -economy : EconomyAdapter
        -ownership : OwnershipServiceAdapter
        -rulesManager : RulesManager
        -rentModifiers : RentModifierService
        -rules : IRuleSet
        -strategy : IRentStrategy
        +TryChargeRent(tenant, tile, diceTotal)
        +SetOwner(tile, owner)
    }

    class RulesManager {
        -standardRuleSet : StandardRuleSet
        -active : IRuleSet
        +GetRuleSet() IRuleSet
        +SetRules(rules)
    }

    class EconomyAdapter {
        +Transfer(from, to, amount) bool
    }

    class Player {
        <<ScriptableObject>>
        +GetId()
        +GetMoney()
        +SetMoney()
    }

    RentManager --> IRentStrategy
    RentManager --> IRuleSet
    RentManager --> IOwnershipService
    RentManager --> RentModifierService
    RentManager --> EconomyAdapter
    RentManager --> RulesManager

    StandardRentStrategy ..|> IRentStrategy
    OwnershipServiceAdapter ..|> IOwnershipService
    StandardRuleSet ..|> IRuleSet

    RentModifierService --> IRentModifier
    RentManager --> Player : tenant/owner